--- a/.cvsignore
+++ b/.cvsignore
@@ -1,20 +1,32 @@
+gfsmxl.pc
+
 *~
 .*~
 *.o
 *.lo
 *.la
-.libs
 *.a
 *.so
+*.gz
+*.bz2
+*.deb
+*.changes
+*.dsc
+*.rpm
+
+rpm
+.libs
 .deps
-*.fst
-*.tfst
-*.lab
-stamp-h*
-config.h
-config.h.in
+
 aclocal.m4
+autom4te.cache
 Makefile
 Makefile.in
-README.txt
+
+*.tmp
 configure
+config.log
+config.status
+config.cache
+libtool
+include
