+ updated gfsmxl.pc.in
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@478 097f6656-c427-11dc-a790-1b5d5187385a

--- a/gfsmxl.pc.in
+++ b/gfsmxl.pc.in
@@ -14,8 +14,8 @@ docdir=@docdir@
 pkgdocdir=@pkgdocdir@
 
 build_options=@CONFIG_OPTIONS@
-cflags=@CFLAGS@
-cppflags=-I@spkgincludedir@ @CPPFLAGS@
+cflags=@CFLAGS@ @gfsmxl_CFLAGS@
+cppflags=-I@spkgincludedir@ @gfsmxl_CPPFLAGS@ @CPPFLAGS@
 ldadd=-lgfsmxl @gfsmxl_LIBS@
 
 
