--- a/gfsmxl.pc.in
+++ b/gfsmxl.pc.in
@@ -14,7 +14,7 @@ docdir=@docdir@
 pkgdocdir=@pkgdocdir@
 
 build_options=@CONFIG_OPTIONS@
-cflags=@CFLAGS@ @gfsmxl_CFLAGS@
+cflags=-I@spkgincludedir@ @gfsmxl_CPPFLAGS@ @CPPFLAGS@ @CFLAGS@
 cppflags=-I@spkgincludedir@ @gfsmxl_CPPFLAGS@ @CPPFLAGS@
 ldadd=-lgfsmxl @gfsmxl_LIBS@
 
