*** empty log message ***
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@490 097f6656-c427-11dc-a790-1b5d5187385a

--- a/configure.ac
+++ b/configure.ac
@@ -498,6 +498,8 @@ if test "$gfsmxl_doc_formats" != "none" ; then
   ##-- docs: .gog sources
   ##
   DOC_MAN1_GOGS="\
+	gfsmxl_cascade_compile.gog \
+	gfsmxl_cascade_nth.gog \
 	"
  DOC_MAN1_GOGS="$DOC_MAN1_GOGS"
   for g in $DOC_MAN1_GOGS ; do
