This commit was manufactured by cvs2svn to create tag 'gfsmxl_0_0_2'.
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/tags/gfsmxl_0_0_2@506 097f6656-c427-11dc-a790-1b5d5187385a

--- a/src/programs/.cvsignore
+++ b/src/programs/.cvsignore
@@ -1,36 +1,5 @@
-gfsmindex
-gfsmarith
-gfsmheader
-gfsmoptional
-gfsmreplace
-gfsmsigma
-gfsmarcsort
-gfsmclosure
-gfsmcompile
-gfsmcomplement
-gfsmcompose
-gfsmcompre
-gfsmconcat
-gfsmconnect
-gfsmconvert
-gfsmdeterminize
-gfsmdifference
-gfsmdraw
-gfsminfo
-gfsmintersect
-gfsminvert
-gfsmlabels
-gfsmlookup
-gfsmprint
-gfsmproduct
-gfsmproject
-gfsmprune
-gfsmrenumber
-gfsmreverse
-gfsmrmepsilon
-gfsmstrings
-gfsmunion
-gfsmviterbi
+gfsmxl_cascade_compile
+gfsmxl_cascade_nth
 
 *.out
 *.tmp
@@ -58,6 +27,8 @@ SFST*
 *.afsa
 *.gfsa
 *.gfst
+*.gfsx
+*.gfsc
 *.dot
 #*.lab
 *.scl
