--- a/src/programs/Makefile.am
+++ b/src/programs/Makefile.am
@@ -17,7 +17,9 @@
 
 ## --- executable programs
 #bin_PROGRAMS = ${prog_1} ... ${prog_N}
-bin_PROGRAMS =
+bin_PROGRAMS = \
+	gfsmxl_cascade_compile \
+	gfsmxl_cascade_nth
 
 EXTRA_DIST =
 
@@ -65,16 +67,42 @@ SUFFIXES = \
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-#gfsmX_SOURCES = \
-#	gfsmX_main.c \
-#	gfsmX_cmdparser.c gfsmX_cmdparser.h
+#gfsmxl_X_SOURCES = \
+#	gfsmxl_X_main.c \
+#	gfsmxl_X_cmdparser.c gfsmxl_X_cmdparser.h
 #
-#gfsmX_main.o: gfsmX_cmdparser.h
+#gfsmxl_X_main.o: gfsmxl_X_cmdparser.h
 #
-#gfsmX_LDFLAGS = $(LDFLAGS_COMMON)
-#gfsmX_LDADD = $(LDADD_COMMON)
+#gfsmxl_X_LDFLAGS = $(LDFLAGS_COMMON)
+#gfsmxl_X_LDADD = $(LDADD_COMMON)
 #
-#EXTRA_DIST += gfsmX.gog
+#EXTRA_DIST += gfsmxl_X.gog
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+gfsmxl_cascade_compile_SOURCES = \
+	gfsmxl_cascade_compile_main.c \
+	gfsmxl_cascade_compile_cmdparser.c gfsmxl_cascade_compile_cmdparser.h
+
+gfsmxl_cascade_compile_main.o: gfsmxl_cascade_compile_cmdparser.h
+
+gfsmxl_cascade_compile_LDFLAGS = $(LDFLAGS_COMMON)
+gfsmxl_cascade_compile_LDADD = $(LDADD_COMMON)
+
+EXTRA_DIST += gfsmxl_cascade_compile.gog
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+gfsmxl_cascade_nth_SOURCES = \
+	gfsmxl_cascade_nth_main.c \
+	gfsmxl_cascade_nth_cmdparser.c gfsmxl_cascade_nth_cmdparser.h
+
+gfsmxl_cascade_nth_main.o: gfsmxl_cascade_nth_cmdparser.h
+
+gfsmxl_cascade_nth_LDFLAGS = $(LDFLAGS_COMMON)
+gfsmxl_cascade_nth_LDADD = $(LDADD_COMMON)
+
+EXTRA_DIST += gfsmxl_cascade_nth.gog
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -117,7 +145,7 @@ endif
 ##-----------------------------------------------------------------------
 
 ## --- preprocessor flags
-AM_CPPFLAGS = -I@srcdir@/../libgfsmxl -I../libgfsmxl
+AM_CPPFLAGS = -I@srcdir@/../libgfsmxl -I../libgfsmxl $(gfsmxl_CPPFLAGS)
 
 ## --- compiler flags (c++)
 AM_CFLAGS = $(gfsmxl_WFLAGS) $(gfsmxl_OFLAGS)
@@ -140,7 +168,7 @@ LDADD_COMMON   = ../libgfsmxl/libgfsmxl.la @gfsmxl_LIBS@
 ##-----------------------------------------------------------------------
 
 fsmclean:
-	rm -f *.afsa *.afst *.gfsa *.gfst *.thfsa *.thfst
+	rm -f *.afsa *.afst *.thfsa *.thfst *.gfsa *.gfst *.gfsx *.gfsc 
 
 ##-----------------------------------------------------------------------
 ## Variables: cleanup
@@ -158,9 +186,9 @@ fsmclean:
 ## -- maintainerclean: built by maintainer / by hand
 MAINTAINERCLEANFILES = \
 	*~ .*~ Makefile Makefile.in \
-	*_cmdparser.cc *_cmdparser.h \
+	*_cmdparser.c *_cmdparser.h \
 	*.man *.1 *.html *.txt *.tex \
-	*.afsa *.afst *.gfsa *.gfst *.thfst \
+	*.afs[atm] *.gfs[atmxc] *.thfs[atm] *.pfs[atm] \
 	*.dot *.ps *.vcg
 
 ##-----------------------------------------------------------------------
