+ added 1-off gfsmxl_cascade_nbest_lookup
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@561 097f6656-c427-11dc-a790-1b5d5187385a

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ(2.5)
 
 dnl Some handy macros
 define([THE_PACKAGE_NAME],    [gfsmxl])
-define([THE_PACKAGE_VERSION], [0.0.6])
+define([THE_PACKAGE_VERSION], [0.0.7])
 define([THE_PACKAGE_MAINTAINER],  [moocow@ling.uni-potsdam.de])
 
 AC_INIT(THE_PACKAGE_NAME, THE_PACKAGE_VERSION, THE_PACKAGE_MAINTAINER)
@@ -501,6 +501,7 @@ if test "$gfsmxl_doc_formats" != "none" ; then
 	gfsmxl_cascade_compile.gog \
 	gfsmxl_cascade_nth.gog \
 	gfsmxl_cascade_nbest_strings.gog \
+	gfsmxl_cascade_nbest_lookup.gog \
 	"
  DOC_MAN1_GOGS="$DOC_MAN1_GOGS"
   for g in $DOC_MAN1_GOGS ; do
