+ added -c flag to gfsmxl_cascade_nbest_lookup
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@563 097f6656-c427-11dc-a790-1b5d5187385a

--- a/doc/programs/Makefile.am
+++ b/doc/programs/Makefile.am
@@ -167,7 +167,7 @@ pdf: $(DOC_PDF_TARGETS)
 ## pod compilation rules: Getopt::Gen
 ##-----------------------------------------------------------------------
 
-OPTGENFLAGS = -l
+OPTGENFLAGS = -l --no-handle-rcfile
 
 if HAVE_OPTGEN
 .gog.pod:
