+ got backtrace-driven automaton construction working; but outrageously slow & memory-consumptive: why?\!
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/branches/gfsmxl-0.0.7+backptr@573 097f6656-c427-11dc-a790-1b5d5187385a

--- a/src/programs/hacks/.cvsignore
+++ b/src/programs/hacks/.cvsignore
@@ -1,6 +1,8 @@
 *~
 .*~
 
+gmon.out
+
 *.lab
 *.scl
 lts*.sym
@@ -12,6 +14,7 @@ align
 robust
 ma-dwds-hacks
 
+dta-china*.t
 negra-train.t
 negra-test.t
 grimm3*-all.*
