+ added yet more debugging code
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@574 097f6656-c427-11dc-a790-1b5d5187385a

--- a/src/programs/hacks/.cvsignore
+++ b/src/programs/hacks/.cvsignore
@@ -1,6 +1,9 @@
 *~
 .*~
 
+gmon.out
+backptr-hacks
+
 *.lab
 *.scl
 lts*.sym
@@ -12,6 +15,7 @@ align
 robust
 ma-dwds-hacks
 
+dta-china*.t
 negra-train.t
 negra-test.t
 grimm3*-all.*
