+ typos and bugfixes
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@580 097f6656-c427-11dc-a790-1b5d5187385a

--- a/configure.ac
+++ b/configure.ac
@@ -179,7 +179,7 @@ if test "$enable_debug" == "yes" ; then
      gfsmxl_OFLAGS=""
    fi
 
-   AC_DEFINE(GFSM_DEBUG_ENABLED,1,
+   AC_DEFINE(GFSMXL_DEBUG_ENABLED,1,
 	     [Define this to enable debugging code])
    DOXY_DEFINES="$DOXY_DEFINES GFSMXL_DEBUG_ENABLED=1"
    #CONFIG_OPTIONS="$CONFIG_OPTIONS DEBUG=1"
