gfsmxl v0.0.10 : updated for gfsm v0.0.10   - now use slice allocators
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@653 097f6656-c427-11dc-a790-1b5d5187385a

--- a/doc/libgfsmxl/mainpage.dox.in
+++ b/doc/libgfsmxl/mainpage.dox.in
@@ -2,7 +2,7 @@
 /** 
 \mainpage libgfsmxl : finite state cascaded lookup utility library
 
-\author Bryan Jurish <moocow@ling.uni-potsdam.de>
+\author Bryan Jurish <moocow.bovine@gmail.com>
 
 \version @VERSION@
 
