* added m4 dir for local macros (currently just libtoolize-generated stuff)
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@654 097f6656-c427-11dc-a790-1b5d5187385a

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,7 @@ SUFFIXES = .pc .pod .txt .html
 pkgconfig_DATA = @PACKAGE@.pc
 
 ##-- for gnulib
-#ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = -I m4
 
 #-----------------------------------------------------------------------
 # Variables: cleanup
