+ updated configure.ac for kaskade
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@664 097f6656-c427-11dc-a790-1b5d5187385a

--- a/configure.ac
+++ b/configure.ac
@@ -132,6 +132,7 @@ YACC="$BISON"
 ##
 dnl v--- needed if Makefile.am uses _LTLIBRARIES targets
 AC_PROG_LIBTOOL
+LT_INIT
 
 dnl v--- for static-only libraries (non-libtool)
 dnl AC_PROG_RANLIB
