+ added cascade set_nth() and pop() methods for dynamic target-language switching
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@701 097f6656-c427-11dc-a790-1b5d5187385a

--- a/doc/libgfsmxl/libgfsmxl.doxy.in
+++ b/doc/libgfsmxl/libgfsmxl.doxy.in
@@ -212,8 +212,8 @@ CALLER_GRAPH           = NO
 DOT_IMAGE_FORMAT       = png
 DOT_PATH               = 
 DOTFILE_DIRS           = 
-MAX_DOT_GRAPH_WIDTH    = 1024
-MAX_DOT_GRAPH_HEIGHT   = 1024
+#MAX_DOT_GRAPH_WIDTH    = 1024
+#MAX_DOT_GRAPH_HEIGHT   = 1024
 GENERATE_LEGEND        = YES
 DOT_CLEANUP            = YES
 
