* added licenses (LGPL-3)
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@724 097f6656-c427-11dc-a790-1b5d5187385a

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,9 +79,12 @@ if HAVE_POD2HTML
 	pod2html --outfile $@ $<
 endif
 
+LICENSES = COPYING.GPL-3 COPYING
+
 pkgdoc_DATA = \
 	$(PODS:.pod=.txt) \
-	$(PODS:.pod=.html)
+	$(PODS:.pod=.html) \
+	$(LICENSES)
 
 #-----------------------------------------------------------------------
 # Variables: distribution
@@ -95,6 +98,7 @@ EXTRA_DIST = \
 	$(PODS) \
 	$(PODS:.pod=.txt) \
 	$(PODS:.pod=.html) \
+	$(LICENSES) \
 	autogen.sh \
 	configure \
 	README.cvs
