git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@734 097f6656-c427-11dc-a790-1b5d5187385a

--- a/doc/libgfsmxl/mainpage.dox.in
+++ b/doc/libgfsmxl/mainpage.dox.in
@@ -6,7 +6,7 @@
 
 \version @VERSION@
 
-<b>Project URL:</b> http://www.ling.uni-potsdam.de/~moocow/projects/gfsm
+<b>Project URL:</b> http://kaskade.dwds.de/~moocow/projects/gfsm
 
 \section Intro Introduction
 
