--- a/perl/svntag.rc
+++ b/perl/svntag.rc
@@ -1,2 +1,2 @@
-svntags=svn+ssh://odo.dwds.de/home/moocow/svn/public/gfsmxl/tags
+svntags=svn+ssh://moocow@odo.dwds.de/home/moocow/svn/public/gfsmxl/tags
 tagprefix=Gfsm-XL
