+ attempting bsd tweaks
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@862 097f6656-c427-11dc-a790-1b5d5187385a

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@
 AUTOMAKE_OPTIONS = foreign
 
 ## --- recursion subdirectories
-SUBDIRS = config src doc
+SUBDIRS = config src $(GFSMXL_DOC_SUBDIRS)
 #SUBDIRST += tests
 
 ## --- pseudo-deps for '.SUFFIXES'
