--- a/doc/libgfsmxl/Makefile.am
+++ b/doc/libgfsmxl/Makefile.am
@@ -79,7 +79,9 @@ all-local: $(STAMPFILE)
 
 ## -- directories for prerequisite-search
 DOXY_INCLUDES = $(top_srcdir)/src/libgfsmxl $(top_builddir)/src/libgfsmxl
+if HAVE_GNU_MAKE
 vpath %.h $(DOXY_INCLUDES)
+endif
 
 DOXY_INPUTS = \
 	mainpage.dox \
